Cambios de traducción y Skill añadidos

--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -28,10 +28,11 @@
             </label>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link active-link">Inicio</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">Sobre mí</a></li>
-                    <li class="nav__item"><a href="#casos-exito" class="nav__link">Casos de Éxito</a></li>
-                    <li class="nav__item"><a href="/indexEnglish.html" class="nav__link">Traducir</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">about</a></li>
+                    <li class="nav__item"><a href="#casos-exito" class="nav__link">success-stories</a></li>
+                    <li class="nav__item"><a href="#Traducir" class="nav__link">Translate</a></li>
+                    
                 </ul>
             </div>
             <div class="nav__toggle" id="nav-toggle">
@@ -64,10 +65,10 @@
         <!--===== HOME =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hola,<br>Soy<span class="home__title-color"> Humberto</span><br> Desarrollador
+                <h1 class="home__title">Hello,<br>I'm<span class="home__title-color"> Humberto</span><br> Developer
                     <br> Front end
                 </h1>
-                <a href="#" class="button">Contacto</a>
+                <a href="#" class="button">Contact</a>
             </div>
 
             <div class="home__social">
@@ -96,20 +97,20 @@
 
         <!--===== ABOUTME =====-->
         <section class="about section " id="about">
-            <h2 class="section-title">Sobre mí</h2>
+            <h2 class="section-title">About me</h2>
             <div class="about__container bd-grid">
                 <div class="about__img">
                     <img src="./assets/img/about.png" alt="">
                 </div>
                 <div>
-                    <h2 class="about__subtitle">Soy Humberto</h2>
-                    <p>Un apasionado del aprendizaje en temas de informática. apasionado por la programación front-end
-                        con HTML, CSS y Javascrip y frameworks como Bootstrap entre otros. Soy comunicativo y disfruto
-                        colaborar en equipo para encontrar soluciones creativas. ¡Emocionado por seguir aprendiendo y
-                        creciendo en el campo de la programación! <br></p>
+                    <h2 class="about__subtitle">I'm Humberto</h2>
+                    <p>Passionate about learning computer science topics. passionate about front-end programming
+                        with HTML, CSS and Javascript and frameworks such as Bootstrap among others. I am communicative and enjoy
+                        Collaborate as a team to find creative solutions. Excited to continue learning and
+                        growing in the field of programming! <br></p>
                     <br>
-                    <p><b><i>Creo que el aprendizaje es un viaje sin fin, y cada línea de código escrita es una
-                                oportunidad para aprender algo nuevo y emocionante en el fascinante mundo del desarrollo
+                    <p><b><i>I believe that learning is an endless journey, and every line of code written is a
+                        opportunity to learn something new and exciting in the fascinating world of development
                             </i></b></p>
                 </div>
             </div>
@@ -126,7 +127,7 @@
         <!--"#skills"-->
         <section class="about section " id="casos-exito">
             
-            <h2 class="section-title">Casos de Éxito</h2>
+            <h2 class="section-title">Success stories</h2>
             <div class="card__container swiper">
                 <div class="card__content">
                     <div class="swiper-wrapper">
@@ -140,7 +141,7 @@
 
                             <div class="card__data">
                                 <p class="card__description">
-                                    Congreso Latinoamericano de Informática y Comunicaciones
+                                    Latin American Congress of Informatics and Communications
                                 </p>
                             </div>
                         </article>
@@ -154,7 +155,7 @@
 
                             <div class="card__data">
                                 <p class="card__description">
-                                    Especialización en Python Django, Aplicaciones Web, Arquitectura y seguridad
+                                    Specialization in Python Django, Web Applications, Architecture and security
                                 </p>
                             </div>
                         </article>
@@ -168,7 +169,7 @@
 
                             <div class="card__data">
                                 <p class="card__description">
-                                    Rally Latinoamericano de innovación
+                                   Latin American Innovation Rally
                                 </p>
                             </div>
                         </article>
@@ -181,7 +182,7 @@
                             </div>
                             <div class="card__data">
                                 <p class="card__description">
-                                    Habilidades en la Nube
+                                    Cloud Skills
                                 </p>
                             </div>
                         </article>
@@ -194,7 +195,7 @@
 
                             <div class="card__data">
                                 <p class="card__description">
-                                    Seguridad en Azure
+                                    Security in Azure
                                 </p>
                             </div>
                         </article>
@@ -221,7 +222,7 @@
 
                             <div class="card__data">
                                 <p class="card__description">
-                                    Ingles A1
+                                    English A1
                                 </p>
                             </div>
                         </article>
@@ -235,7 +236,7 @@
 
                             <div class="card__data">
                                 <p class="card__description">
-                                    Javascrip Engine (V8)
+                                    Javascript Engine (V8)
                                 </p>
                             </div>
                         </article>
@@ -249,7 +250,7 @@
 
                             <div class="card__data">
                                 <p class="card__description">
-                                    Algoritmos y diagramas de flujo
+                                    Algorithms and flowcharts
                                 </p>
                             </div>
                         </article>
@@ -263,7 +264,7 @@
 
                             <div class="card__data">
                                 <p class="card__description">
-                                    Configuración de entorno de desarrollo MACOS
+                                    MACOS development environment configuration
                                 </p>
                             </div>
                         </article>
@@ -277,7 +278,7 @@
 
                             <div class="card__data">
                                 <p class="card__description">
-                                    Ciberseguridad
+                                    Cybersecurity
                                 </p>
                             </div>
                         </article>
@@ -315,7 +316,7 @@
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram'></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-twitter'></i></a>
             </div>
-            <p class="footer__copy">&#169;    "Creando conexiones visuales que inspiran y cautivan: mi mundo es el desarrollo front end"</p>
+            <p class="footer__copy">&#169;    Creating visual connections that inspire and captivate: my world is front end development</p>
         </footer>
 
 
