traducción de español a ingles y sección de contacto agregada

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="nav__item"><a href="#home" class="nav__link active-link">Inicio</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">Sobre mí</a></li>
                     <li class="nav__item"><a href="#casos-exito" class="nav__link">Casos de Éxito</a></li>
+                    <li class="nav__item"><a href="#contact" class="nav__link">Contacto</a></li>
                     <li class="nav__item"><a href="/indexEnglish.html" class="nav__link">Traducir</a></li>
                 </ul>
             </div>
@@ -303,6 +304,20 @@
             <div class="credly-btn-container">
                 <a href="https://www.credly.com/users/carlos-humberto-chavarria-aparicio"
                     class="BtnRedireccion">Credly</a>
+            </div>
+        </section>
+
+         <!--===== CONTACT =====-->
+         <section class="contact section" id="contact">
+            <h2 class="section-title">Contacto</h2>
+
+            <div class="contact__container bd-grid">
+                <form action="" class="contact__form">
+                    <input type="text" placeholder="Name" class="contact__input">
+                    <input type="mail" placeholder="Email" class="contact__input">
+                    <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                    <input type="button" value="Enviar" class="contact__button button">
+                </form>
             </div>
         </section>
 
