--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -31,7 +31,7 @@
                     <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">about</a></li>
                     <li class="nav__item"><a href="#casos-exito" class="nav__link">success-stories</a></li>
-                    <li class="nav__item"><a href="#Traducir" class="nav__link">Translate</a></li>
+                    <li class="nav__item"><a href="/index.html" class="nav__link">Translate</a></li>
                     
                 </ul>
             </div>
